# backend-mmorpg-proxy-to-real-backend-as-default-service

./: .gitignore  Cargo.toml  README.md  build.rs
debug/: game_save.json
socket_macros/: Cargo.toml
socket_macros/src/: lib.rs
src/: main.rs  proxy.rs
src/adapters/: fileread.rs  mod.rs  record_data_codec.rs  record_data_mapper.rs  record_data_response.rs
src/adapters/handlers/: mod.rs
src/adapters/legacy_sync/: mod.rs  runtime_sync.rs  supervisor.rs  warmup.rs
src/adapters/world/: dispatch_routes.rs  mod.rs
src/application/use_case/: client_record_data.rs  load_skill_state.rs  mod.rs  skill_runtime.rs
src/config/: global.rs  handlers.rs  log.rs  middleware.rs  mod.rs
src/debug_ui/: app.rs  mod.rs  player_panel.rs  runtime_panel.rs  shared.rs  store.rs
src/domain/: mod.rs
src/domain/field/: catalog.rs  dto.rs  mod.rs
src/domain/item/: combo.rs  dto.rs  item_code.rs  item_table.rs  mod.rs
src/domain/player/: dto.rs  mod.rs  rs_play_info.rs
src/domain/skill/: cast_validation.rs  cast_validation_party.rs  cast_validation_target_buff.rs  classification.rs  formula.rs  mod.rs  runtime.rs  state.rs
src/domain/user_player/: calc.rs  char_motion_state.rs  dto.rs  mod.rs  state.rs  (+1 more)
src/error/: macros.rs  mod.rs
src/libs/: compressor.rs  decompress_record_items.rs  mod.rs
src/protocol/: arena.rs  char.rs  chat.rs  command.rs  constants.rs  cracker.rs  data.rs  item.rs  job_code.rs  mod.rs  server_info.rs  shop.rs  skill.rs  transcode.rs  user.rs
src/state/: legacy_sync.rs  mod.rs
src/world_transport/: messages.rs  mod.rs  net_command.rs
(+76 files in other folders)
