[package]
name = "source-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
socket = { path = "socket"}
async-trait = "0.1.83"
chrono = "0.4.38"
eframe = "0.33.0"
fern = "0.6.2"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.38.1", features = ["full"] }
bitflags = "2.11.0"
paste = "1.0.15"
seq-macro = "0.3.6"
serde_arrays = "0.2.0"
uuid = { version = "1.18.1", features = ["v5"] }
winit = "0.30.13"
